# harmont-py

./: .gitignore  CLAUDE.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-21-hm-dev-deploy-py.md  2026-05-21-pypi-tag-release-cd.md
docs/superpowers/specs/: 2026-05-21-hm-dev-deploy-design.md
harmont/: __init__.py  _decorator.py  _deploy.py  _deps.py  _envelope.py  _keys.py  _registry.py  _step.py  _target.py  _toolchain.py  _typing.py  _unwrap.py  _validation.py  cache.py  cmake.py  composer.py  dotnet.py  elm.py  go.py  gradle.py  haskell.py  json_emit.py  keygen.py  npm.py  ocaml.py  perl.py  pipeline.py  python.py  ruby.py  rust.py  triggers.py  types.py  zig.py
harmont/dev/: __init__.py  __main__.py  _deployment.py  _factory.py  _port.py  _registry_dump.py
tests/: conftest.py  examples_render_conftest.py  test_cache.py  test_cmake.py  test_composer.py  test_decorator.py  test_deps.py  test_dotnet.py  test_elm.py  test_envelope.py  test_examples_render.py  test_go.py  test_gradle.py  test_har_28_example.py  test_haskell.py  test_haskell_cabal_alias.py  test_json_emit.py  test_keygen.py  test_keys.py  test_npm.py  test_ocaml.py  test_perl.py  test_pipeline.py  test_pipeline_fixtures.py  test_pipeline_lowering.py  test_python.py  test_registry.py  test_ruby.py  test_rust.py  test_sh_shorthand.py  test_step_chain.py  test_step_sh.py  test_strict_signature.py  test_target.py  test_target_cross_module.py  test_target_fixtures.py  test_target_unwrap.py  test_toolchain.py  test_toolchain_compose.py  test_triggers.py  (+4 more)
tests/dev/: conftest.py  test_canonical_example.py  test_decorator.py  test_dep_marker.py  test_deploy_factory.py  test_dump_cli.py  test_local_deployment.py  test_port_sentinel.py  test_registry_dump.py  test_topo.py
